# dw-agent

./: .dockerignore  Dockerfile  LICENSE  bandit-report.json  pyproject.toml  safety-report.txt
data/: comments.txt  contacts.json  dates.txt  email.txt  format.md  sorted-contacts.json  ticket-sales.db
data/docs/against/: ago.md  direction.md  hear.md  human.md  if.md  month.md  none.md  party.md  test.md  win.md
data/docs/along/: agent.md  behind.md  college.md  from.md  hit.md  or.md  pattern.md  represent.md  south.md  table.md
data/docs/interview/: become.md  fish.md  hair.md  left.md  make.md  nor.md  not.md  suggest.md  take.md  top.md
data/docs/make/: arrive.md  blue.md  crime.md  dinner.md  he.md  instead.md  should.md  water.md  win.md
data/docs/nature/: behind.md  direction.md  every.md  for.md  occur.md  our.md  parent.md  pattern.md  per.md  store.md
data/docs/series/: arrive.md  energy.md  father.md  four.md  institution.md  somebody.md  stand.md  test.md  whether.md  wrong.md
data/docs/set/: build.md  expert.md  film.md  hotel.md  manage.md  necessary.md  our.md  phone.md  resource.md  worry.md
data/docs/significant/: American.md  drive.md  feeling.md  green.md  model.md  no.md  opportunity.md  realize.md  subject.md  themselves.md
data/docs/that/: action.md  among.md  citizen.md  direction.md  else.md  final.md  great.md  (+3 more)
src/: main.py
src/routes/: read.py  run.py
src/tasks/: a1.py  a10.py  a2.py  a3.py  a4.py  a5.py  a6.py  a7.py  a8.py  a9.py  b3.py  b4.py  b5.py  b6.py  b7.py  b9.py
src/utils/: cache.py  llm.py  security.py
(+10 files in other folders)
