[project]
requires-python = ">=3.12"  # Add this line
name = "dataworks-agent"
version = "0.1.0"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "python-dateutil>=2.9.0",
    "numpy>=1.26.4"
]

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"